# palbot

./: .dockerignore  .env_base  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
src/: main.py
src/palbot/: config.py  dbot.py  papi.py
src/palbot/containers/: _base.py  palworld.py  ubhello.py
src/palbot/models/: __init__.py  msg.py
