[project]
name = "palbot"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "motty", email = "motty.mio2@gmail.com" }]
dependencies = [
    "docker>=7.1.0",
    "python-dotenv>=1.0.1",
    "discord-py>=2.4.0",
    "types-requests>=2.32.0.20240712",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ruff>=0.5.4", "mypy>=1.11.0", "pytest>=8.3.1"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/palbot"]
